fix table cell spacing

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   border-radius: 13px;
 }
+
+.table-cell {
+  width: 100px;
+  padding: 20px;
+}
